// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> DOM element Render correctly when essential props are passed  1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e"
  >
    <img
      alt="this alt from data"
      className="htz-f htz-g htz-h htz-i htz-d"
      src="https://images.haarets.co.il/image/upload/w_500,h_400,x_0,y_0,c_crop,g_north_west/q_auto,h_836,w_1045,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1514197183/1.4921360.922278056.jpg"
      title="this is credit"
    />
  </div>
</div>
`;

exports[`<Image /> DOM element Render correctly when essential props are passed  2`] = `".htz-a{height:0rem}.htz-b{padding-bottom:80%}.htz-c{position:relative}.htz-d{width:100%}.htz-e{background-color:#EBEBEB}.htz-f{height:100%}.htz-g{left:0rem}.htz-h{position:absolute}.htz-i{top:0rem}"`;

exports[`<Image /> DOM element Render img correctly when all props are passed, lazyLoad=false  1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e"
  >
    <img
      alt="this alt from data"
      aria-hidden={true}
      className="htz-f htz-g htz-h htz-i htz-d"
      data-test="test"
      role="presentation"
      sizes="(min-width:1420px) 610px,(min-width:1320px) 500px, 280px"
      src="https://images.haarets.co.il/image/upload/w_2220,h_800,x_10,y_0,c_crop,g_north_west/q_auto:best,h_100,w_145,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1514197183/1.4921360.922278056.jpg"
      srcSet={
        Array [
          "https://images.haarets.co.il/image/upload/w_2220,h_800,x_10,y_0,c_crop,g_north_west/q_auto:best,h_100,w_145,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1514197183/1.4921360.922278056.jpg 145w",
          "https://images.haarets.co.il/image/upload/w_2220,h_800,x_10,y_0,c_crop,g_north_west/q_auto,h_159,w_245,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1514197183/1.4921360.922278056.jpg 245w",
          "https://images.haarets.co.il/image/upload/w_2220,h_800,x_10,y_0,c_crop,g_north_west/q_auto,h_160,w_445,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1514197183/1.4921360.922278056.jpg 445w",
        ]
      }
      title="this is credit"
    />
  </div>
</div>
`;

exports[`<Image /> DOM element Render img correctly when all props are passed, lazyLoad=false  2`] = `".htz-a{height:0rem}.htz-b{padding-bottom:36.03603603603604%}.htz-c{position:relative}.htz-d{width:100%}.htz-e{background-color:#EBEBEB}.htz-f{height:100%}.htz-g{left:0rem}.htz-h{position:absolute}.htz-i{top:0rem}"`;

exports[`<Image /> DOM element Render picture correctly when all props are passed, lazyLoad=false  1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e"
  >
    <picture>
      <source
        sizes="(min-width:1420px) 610px,(min-width:1320px) 500px, 240px"
        srcSet={
          Array [
            "https://images.haarets.co.il/image/upload/w_394,h_200,x_33,y_0,c_crop,g_north_west/q_auto:best,h_100,w_145,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1515097953/1.5599867.4030303706.webp 145w",
            "https://images.haarets.co.il/image/upload/w_394,h_200,x_33,y_0,c_crop,g_north_west/q_auto,h_159,w_245,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1515097953/1.5599867.4030303706.webp 245w",
            "https://images.haarets.co.il/image/upload/w_394,h_200,x_33,y_0,c_crop,g_north_west/q_auto,h_226,w_445,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1515097953/1.5599867.4030303706.webp 445w",
          ]
        }
        type="image/webp"
      />
      <img
        alt="this alt from data"
        aria-hidden={true}
        border="15px solid"
        className="htz-f htz-g htz-h htz-i htz-d"
        role="presentation"
        sizes="(min-width:1420px) 610px,(min-width:1320px) 500px, 240px"
        src="https://images.haarets.co.il/image/upload/w_394,h_200,x_33,y_0,c_crop,g_north_west/q_auto:best,h_100,w_145,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1515097953/1.5599867.4030303706.gif"
        srcSet={
          Array [
            "https://images.haarets.co.il/image/upload/w_394,h_200,x_33,y_0,c_crop,g_north_west/q_auto:best,h_100,w_145,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1515097953/1.5599867.4030303706.gif 145w",
            "https://images.haarets.co.il/image/upload/w_394,h_200,x_33,y_0,c_crop,g_north_west/q_auto,h_159,w_245,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1515097953/1.5599867.4030303706.gif 245w",
            "https://images.haarets.co.il/image/upload/w_394,h_200,x_33,y_0,c_crop,g_north_west/q_auto,h_226,w_445,c_fill,f_auto/fl_any_format.preserve_transparency.progressive:none/v1515097953/1.5599867.4030303706.gif 445w",
          ]
        }
        title="this is title/credit"
      />
    </picture>
  </div>
</div>
`;

exports[`<Image /> DOM element Render picture correctly when all props are passed, lazyLoad=false  2`] = `".htz-a{height:0rem}.htz-b{padding-bottom:50.76142131979695%}.htz-c{position:relative}.htz-d{width:100%}.htz-e{background-color:#EBEBEB}.htz-f{height:100%}.htz-g{left:0rem}.htz-h{position:absolute}.htz-i{top:0rem}"`;
